[package]
name = "rust_widevine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
crunchyroll-rs = { version = "0.6.2", features = ["experimental-stabilizations", "parse"], default-features = false}
dotenv = "0.15.0"
hex = "0.4.3"
http = "0.2.9"
openssl = { version = "0.10.57", features = ["vendored"] }
prost = "0.12.0"
prost-types = "0.12.0"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["cookies", "json", "rustls-tls", "brotli", "gzip", "deflate"], default-features = false }
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
tokio = { version = "1.32.0", features = ["macros"] }

[build-dependencies]
prost-build = "0.12.0"
